@@ -9,3 +9,10 @@ iface wlan0 inet static
 auto eth0
 allow-hotplug eth0
 iface eth0 inet dhcp
+
+auto lo
+iface lo inet loopback
+
+auto eth1
+allow-hotplug eth1
+iface eth1 inet dhcp
