@@ -1,8 +1,8 @@
 {
     "RtcConfig" : null,
     "FallbackFFmpegPath": "ffmpeg2",
-    "FallbackUseMp3": true,
-    "FallbackUseWav": true,
+    "FallbackUseMp3": false,
+    "FallbackUseWav": false,
     "FallbackMp3Bitrate": 128,
     "FallbackWavSampleRate": 16000,
     "AdminKey": ""
